engine/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__comment placement.snap
---
source: engine/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define/**/A(B,/**/ /**/C)/**/ \"B C\" /**/ // a b c\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        Some(
                            {
                                "B",
                                "C",
                            },
                        ),
                        Macro(
                            [
                                (
                                    Single(
                                        (
                                            Ident(
                                                "B",
                                            ),
                                            Span {
                                                source: File(
                                                    "test.event",
                                                ),
                                                span: Position {
                                                    offset: 32,
                                                    row: 0,
                                                    col: 32,
                                                }..Position {
                                                    offset: 33,
                                                    row: 0,
                                                    col: 33,
                                                },
                                            },
                                        ),
                                    ),
                                    Span {
                                        source: File(
                                            "test.event",
                                        ),
                                        span: Position {
                                            offset: 32,
                                            row: 0,
                                            col: 32,
                                        }..Position {
                                            offset: 34,
                                            row: 0,
                                            col: 34,
                                        },
                                    },
                                ),
                                (
                                    Single(
                                        (
                                            Ident(
                                                "C",
                                            ),
                                            Span {
                                                source: File(
                                                    "test.event",
                                                ),
                                                span: Position {
                                                    offset: 34,
                                                    row: 0,
                                                    col: 34,
                                                }..Position {
                                                    offset: 35,
                                                    row: 0,
                                                    col: 35,
                                                },
                                            },
                                        ),
                                    ),
                                    Span {
                                        source: File(
                                            "test.event",
                                        ),
                                        span: Position {
                                            offset: 34,
                                            row: 0,
                                            col: 34,
                                        }..Position {
                                            offset: 35,
                                            row: 0,
                                            col: 35,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                ),
                Span {
                    source: File(
                        "test.event",
                    ),
                    span: Position {
                        offset: 0,
                        row: 0,
                        col: 0,
                    }..Position {
                        offset: 51,
                        row: 1,
                        col: 0,
                    },
                },
            ),
        ],
    ),
)
