engine/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__include.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#include A/B/C // a b c\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Include(
                        "A/B/C",
                    ),
                ),
                Span {
                    source: Source(
                        "test.event",
                    ),
                    span: Position {
                        offset: 0,
                        row: 0,
                        col: 0,
                    }..Position {
                        offset: 24,
                        row: 1,
                        col: 0,
                    },
                },
            ),
        ],
    ),
)
