engine/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__no body.snap
---
source: engine/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define A\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        None,
                        Macro(
                            [],
                        ),
                    ),
                ),
                Span {
                    source: File(
                        "test.event",
                    ),
                    span: Position {
                        offset: 0,
                        row: 0,
                        col: 0,
                    }..Position {
                        offset: 10,
                        row: 1,
                        col: 0,
                    },
                },
            ),
        ],
    ),
)
