engine/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__quotes only.snap
---
source: engine/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define A \"B C\"\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        None,
                        Macro(
                            [
                                (
                                    Single(
                                        (
                                            Ident(
                                                "B",
                                            ),
                                            Span {
                                                source: File(
                                                    "test.event",
                                                ),
                                                span: Position {
                                                    offset: 11,
                                                    row: 0,
                                                    col: 11,
                                                }..Position {
                                                    offset: 12,
                                                    row: 0,
                                                    col: 12,
                                                },
                                            },
                                        ),
                                    ),
                                    Span {
                                        source: File(
                                            "test.event",
                                        ),
                                        span: Position {
                                            offset: 11,
                                            row: 0,
                                            col: 11,
                                        }..Position {
                                            offset: 13,
                                            row: 0,
                                            col: 13,
                                        },
                                    },
                                ),
                                (
                                    Single(
                                        (
                                            Ident(
                                                "C",
                                            ),
                                            Span {
                                                source: File(
                                                    "test.event",
                                                ),
                                                span: Position {
                                                    offset: 13,
                                                    row: 0,
                                                    col: 13,
                                                }..Position {
                                                    offset: 14,
                                                    row: 0,
                                                    col: 14,
                                                },
                                            },
                                        ),
                                    ),
                                    Span {
                                        source: File(
                                            "test.event",
                                        ),
                                        span: Position {
                                            offset: 13,
                                            row: 0,
                                            col: 13,
                                        }..Position {
                                            offset: 14,
                                            row: 0,
                                            col: 14,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                ),
                Span {
                    source: File(
                        "test.event",
                    ),
                    span: Position {
                        offset: 0,
                        row: 0,
                        col: 0,
                    }..Position {
                        offset: 16,
                        row: 1,
                        col: 0,
                    },
                },
            ),
        ],
    ),
)
