engine/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__spaces.snap
---
source: engine/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define A(B,C)C\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        Some(
                            {
                                "B",
                                "C",
                            },
                        ),
                        Macro(
                            [
                                (
                                    Single(
                                        (
                                            Ident(
                                                "C",
                                            ),
                                            Span {
                                                source: File(
                                                    "test.event",
                                                ),
                                                span: Position {
                                                    offset: 14,
                                                    row: 0,
                                                    col: 14,
                                                }..Position {
                                                    offset: 15,
                                                    row: 0,
                                                    col: 15,
                                                },
                                            },
                                        ),
                                    ),
                                    Span {
                                        source: File(
                                            "test.event",
                                        ),
                                        span: Position {
                                            offset: 14,
                                            row: 0,
                                            col: 14,
                                        }..Position {
                                            offset: 15,
                                            row: 0,
                                            col: 15,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                ),
                Span {
                    source: File(
                        "test.event",
                    ),
                    span: Position {
                        offset: 0,
                        row: 0,
                        col: 0,
                    }..Position {
                        offset: 16,
                        row: 1,
                        col: 0,
                    },
                },
            ),
        ],
    ),
)
